:fix :bug: error to read and news endpoints
