# docs/swagger.json
@@ -8,6 +8,180 @@
     },
     "basePath": "/api",
     "paths": {
+        "/v1/connector/folders": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Obter os emails para os parametros informados.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Email"
+                ],
+                "summary": "Leitura de Emails",
+                "operationId": "GetFolders",
+                "parameters": [
+                    {
+                        "description": "Requisição Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetFoldersRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Dados recebidos!",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.HttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.MarkEmailResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Requisição Inválida",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/connector/mark": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Obter os emails para os parametros informados.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Email"
+                ],
+                "summary": "Leitura de Emails",
+                "operationId": "MarkEmailID",
+                "parameters": [
+                    {
+                        "description": "Requisição Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.MarkEmailIDRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Dados recebidos!",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.HttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.MarkEmailResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Requisição Inválida",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/connector/move": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Obter os emails para os parametros informados.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Email"
+                ],
+                "summary": "Leitura de Emails",
+                "operationId": "MoveTo",
+                "parameters": [
+                    {
+                        "description": "Requisição Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.MoveToRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Dados recebidos!",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.HttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.MarkEmailResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Requisição Inválida",
+                        "schema": {
+                            "$ref": "#/definitions/response.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/connector/read": {
             "post": {
                 "security": [
@@ -23,7 +197,7 @@
                     "Email"
                 ],
                 "summary": "Leitura de Emails",
-                "operationId": "GetEmailFilter",
+                "operationId": "GetEmailFilterFolder",
                 "parameters": [
                     {
                         "description": "Requisição Body",
@@ -81,7 +255,7 @@
                     "Email"
                 ],
                 "summary": "Leitura de Emails",
-                "operationId": "GetEmailFilterFull",
+                "operationId": "GetEmailFilterFullFolder",
                 "parameters": [
                     {
                         "description": "Requisição Body",
@@ -172,7 +346,10 @@
                     "description": "Condição de filtro",
                     "type": "string"
                 },
-                "includeHiddenMessages": {
+                "folder_id": {
+                    "type": "string"
+                },
+                "include_hidden_messages": {
                     "description": "Flag para incluir mensagens ocultas",
                     "type": "boolean"
                 },
@@ -204,6 +381,14 @@
                 }
             }
         },
+        "request.GetFoldersRequest": {
+            "type": "object",
+            "properties": {
+                "folder": {
+                    "type": "string"
+                }
+            }
+        },
         "request.GetTokenRequest": {
             "type": "object",
             "required": [
@@ -212,6 +397,31 @@
             "properties": {
                 "key": {
                     "type": "string"
+                }
+            }
+        },
+        "request.MarkEmailIDRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "request.MoveToRequest": {
+            "type": "object",
+            "properties": {
+                "folder": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -286,6 +496,9 @@
                 "has_attachments": {
                     "type": "boolean"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "importance": {
                     "type": "string"
                 },
@@ -329,6 +542,15 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.MarkEmailResponse": {
+            "type": "object",
+            "properties": {
+                "error": {},
+                "id": {
                     "type": "string"
                 }
             }
